--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
   },
   "dependencies": {
     "flexboxgrid": "^6.3.1",
-    "gulp-cssnano": "^2.1.2",
-    "node-accuweather": "^1.7.0"
+    "gulp-cssnano": "^2.1.2"
   }
 }
