updating gulpfile and rearranging folder structure

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "del": "^2.2.2",
     "gulp": "^3.9.1",
     "gulp-connect": "^5.0.0",
+    "gulp-obfuscate": "^0.2.9",
     "gulp-sass": "^3.1.0",
     "gulp-uglify": "^2.0.1",
     "gulp-useref": "^3.1.2",
